# lwm

./: .gitignore  Cargo.toml  README.md  justfile
example/: lwm.yml
example/xephyr/: run.zsh  xinitrc
src/: cli.rs  client.rs  config.rs  core.rs  cycle.rs  error.rs  events.rs  geometry.rs  input.rs  macros.rs  main.rs  messages.rs  monitor.rs  pointer.rs  query.rs  rule.rs  stack.rs  subscribe.rs  tree.rs  types.rs  utils.rs  xcb_utils.rs  xconnection.rs  xutils.rs
src/core/: change.rs  decoration.rs  mod.rs
src/manager/: mod.rs
src/monitor/: client.rs  mod.rs  monitor.rs  workspace.rs
src/x/: event.rs  input.rs  mod.rs  property.rs  stream.rs  xconnection.rs
