[package]
name = "lwm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.55"
thiserror = "1.0.30"

clap = { version = "3.0.13", features = ["derive", "default", "cargo", "wrap_help", "env"] }
clap_generate = "3.0.3"
format_serde_error = "0.3.0"
serde = "1.0.136"
serde_yaml = "0.8.23"

regex = "1.5.4"
itertools = "0.10.3"
directories = "4.0.1"
shellexpand = "2.1.0"
strip-ansi-escapes = "0.1.1"
maplit = "1.0.2"
tern = { git = "https://github.com/lmburns/tern" }
attr-rs = { git = "https://github.com/lmburns/Attr-rs" }
colored = "2.0.0"

# xkbcommon = { version = "0.5.0-beta", features = ["x11"] }
x11rb = { version = "0.9.0", features = ["xkb", "cursor", "xinerama", "randr", "res", "xtest"] }
indexmap = { version = "1.7.0", features = ["serde-1"] }
once_cell = "1.9.0"
daemonize = "0.4.1"
nix = "0.23.1"
libc = "0.2.119"

psutil = { version = "3.2.1", default-features = false, features = ["process"] }
chrono = "0.4.19"

# rayon = "1.5.1"
crossbeam-channel = "0.5.1"
crossbeam-utils = "0.8.5"

log = "0.4.14"
flexi_logger = { version = "0.18", default_features = false, features = ["colors"] }
better-panic = "0.2.0"
which = "4.2.4"
serde_json = "1.0.79"
bitflags = "1.3.2"

strum = { version = "0.19", features = ["derive"] }
strum_macros = "0.19"

whoami = "1.2.1"
bincode = "1.3.3"
